CO-703: matrix radio alignment fix

--- a/components/corespring/match/src/client/styles.less
+++ b/components/corespring/match/src/client/styles.less
@@ -145,6 +145,10 @@
   padding-top: 14px;
   margin-bottom: 20px;
 
+  .choice-radio-button .choice-icon-holder .choice-icon {
+    left: 7px;
+  }
+
   .icon-toggle.icon-toggle-correct {
     text-align: center;
     width: 100%;
